<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/dialog_alert"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_height="wrap_content"
        tools:text="dsgfddddddddddddddd" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/dialog_negative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tips" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>