<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/runtime_parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.7">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_lwjgl" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/lwjgl_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/lwjgl_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:tint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_cacio" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/cacio_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/cacio_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:tint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_cacio17" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/cacio17_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/cacio17_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:tint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_java8" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/java8_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/java8_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:tint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_java17" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/java17_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/java17_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <com.tungsten.fcllibrary.component.view.FCLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splash_runtime_game_packages" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <com.tungsten.fcllibrary.component.view.FCLProgressBar
                    android:id="@+id/game_packages_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:visibility="gone" />
                <com.tungsten.fcllibrary.component.view.FCLImageView
                    android:id="@+id/game_packages_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/darker_gray"
                    app:auto_src_tint="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    <View
        android:id="@+id/split"
        android:background="@android:color/darker_gray"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/runtime_parent"/>
    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/splash_runtime_title"
        app:layout_constraintStart_toEndOf="@id/split"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.tungsten.fcllibrary.component.view.FCLButton
        android:text="@string/splash_runtime_install"
        android:id="@+id/install"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/split"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>